Fix NavBar overlap

--- a/recipes/src/components/Navbar/styles.scss
+++ b/recipes/src/components/Navbar/styles.scss
@@ -2,7 +2,7 @@
 
 .cbk-navbar {
   background-color: white;
-  margin-top: $spacing-regular;
+  margin: $spacing-regular 0;
   padding: $spacing-regular;
   display: flex;
   flex-direction: row;
