--- a/recipes/src/styles/app.scss
+++ b/recipes/src/styles/app.scss
@@ -207,7 +207,7 @@ code {
 }
 
 .cbk-app-content {
-  padding: $spacing-regular 0;
+  padding-bottom: $spacing-regular;
 }
 
 .cbk-burger {
